# UM_PAT_PhD_course_files

./: .gitignore  CSE_ppl_to_contact.rtf  EXCEL_Gabrielle_Jovan_mtg.rtf  herman_mtg_2_19_25.rtf  quals_timeline.aeon  two_year_sketch_1.rtf
598_Music_AI/: assignment2.ipynb  ilaria_manco_convo.rtf  pyproject.toml
598_Music_AI/assignment_2/: Molly_Jones_assignment_2.ipynb
598_Music_AI/assignment_3/: .gitignore  pyproject.toml
598_Music_AI/semester_project/miditok_test Project/: miditok_test.als
598_Music_AI/testing_generated_piano Project/: generated_piano_davis_piano_v3.als  movt_ii_with_midi.als  movt_iii_gathering_segments.als  testing_generated_piano.als  testing_generated_piano_davis_piano.als  testing_generated_piano_decoder_only.als
598_Music_AI/testing_generated_piano Project/Backup/: generated_piano_davis_piano_v2 [2024-12-08 104739].als  generated_piano_davis_piano_v2 [2024-12-08 104946].als  generated_piano_davis_piano_v2 [2024-12-08 113254].als  generated_piano_davis_piano_v2 [2024-12-08 114551].als  generated_piano_davis_piano_v2 [2024-12-08 114555].als  generated_piano_davis_piano_v2 [2024-12-08 115142].als  generated_piano_davis_piano_v2 [2024-12-08 115459].als  generated_piano_davis_piano_v2 [2024-12-08 115807].als  generated_piano_davis_piano_v3 [2024-12-09 104714].als  generated_piano_davis_piano_v3 [2024-12-09 123443].als  generated_piano_davis_piano_v3 [2024-12-09 123548].als  (+57 more)
599 Matrix Methods for ML/sound_samples/: dagshub_download.py  freesound1010.csv  freesound1010.xls  freesound_download.py  pyproject.toml
(+644 files in other folders)
